# easi-publish

./: LICENSE  README.md
.github/: temp.txt
easi-publish/: Cargo.toml  README.md
easi-publish-axum/: Cargo.toml  README.md
easi-publish-axum/src/: error.rs  html.rs  lib.rs  pdf.rs  util.rs
easi-publish/benches/: render.rs
easi-publish/src/: clock.rs  data.rs  diagnostics.rs  error.rs  fonts.rs  html.rs  image_util.rs  lib.rs  pdf.rs  renderer.rs  template.rs  world.rs
easi-publish/tests/: integration.rs
easi-publish/tests/fixtures/: invoice-min.json  invoice-min.typ  invoice.typ
examples/invoice/: Cargo.toml
examples/invoice/assets/: style.css
examples/invoice/src/: invoice.rs  main.rs  routes.rs  state.rs  validation.rs
examples/invoice/templates/: invoice-logo-small.typ  invoice-logo.typ  invoice.json  invoice.typ  page.html
